@@ -1,3 +1,7 @@
+2011-08-11  Dmitry Melnik  <dm@ispras.ru>
+
+	* sel-sched-ir.c (invalidate_av_set): Remove the assert.
+
 2011-08-11  Sergey Grechanik  <mouseentity@ispras.ru>
 
 	* sel-sched-ir.h (register_unavailable_p): Declare.
